# zork

./: Attack.cpp  Attack.h  CMakeLists.txt  README.md  container.cpp  container.h  creature.cpp  creature.h  header.h  item.cpp  item.h  main.cpp  main.h  random.txt  room.cpp  room.h  sample.txt.xml  trigger.cpp  trigger.h  zork.cpp  zork.exe.stackdump  zork.h
